# connectedhomeip

./: .gitmodules  CODEOWNERS  Jenkinsfile  Jenkinsfile.suds  dsc_release.yml  matter.slce  matter.slsdk  matter_demos.xml  matter_templates.xml  pipeline_metadata.yml
.github/workflows/: cirque.yaml  gradle-wrapper-validation.yml  spell.yml
docs/silabs/: OVERVIEW.md  README.md  index.md
docs/silabs/.suds/: _docleaf-sld245-matter-bridge.yml  _docleaf-sld246-matter-faq.yml  _docleaf-sld247-matter-overview.yml  _docleaf-sld248-matter-overview-guides.yml  _docleaf-sld249-matter-prerequisites.yml  _docleaf-sld250-matter-references.yml  _docleaf-sld251-matter-thread.yml  _docleaf-sld252-matter-vscode.yml  _docleaf-sld253-matter-wifi.yml  _docleaf-sld254-matter-studio.yml  _docspace-sld56-matter.yml  check.sh  compile.bat  compile.sh  (+3 more)
examples/chef/: chef.py
silabs_examples/unify-matter-bridge/: index.md  readme_overview.md  readme_user.md
slc/: build.sh  copy-app.sh  copy-extension.sh
slc/component/: matter.slcc  matter_ble.slcc  matter_display.slcc  matter_mbedtls.slcc  matter_platform_efr32.slcc  matter_qr_code.slcc  matter_shell.slcc  matter_thread_ftd.slcc  matter_thread_full.slcc  matter_thread_sed.slcc  mbedtls_pkcs.slcc
slc/config/: sl_matter_config.h
slc/lock-app/: build.sh  lock-app.slcp
slc/script/: gen_components.py  gsdk_matter.patch
src/app/: ReadHandler.cpp
src/controller/: ExampleOperationalCredentialsIssuer.cpp
src/crypto/: CHIPCryptoPALOpenSSL.cpp  CHIPCryptoPALmbedTLS.cpp
src/platform/silabs/tests/: BUILD.gn  TestKeyValueStoreManagerImpl.cpp
src/python_testing/: TC_ICDM_3_2.py
(+276 files in other folders)
