# Copyright (c) 2025 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")
import("//build_overrides/pigweed.gni")
import("${chip_root}/build/chip/chip_test_group.gni")
import("${chip_root}/build/chip/chip_test_suite.gni")
import("${chip_root}/src/platform/silabs/tests/args.gni")

if (sl_build_unit_tests) {
  chip_test_suite("platform_tests") {
    output_name = "libSilabsPlatformTests"

    test_sources = [ "TestKeyValueStoreManagerImpl.cpp" ]

    public_deps = [
      "${chip_root}/src/lib/core:string-builder-adapters",
      "${chip_root}/src/lib/support:testing",
      "${chip_root}/src/platform/silabs/efr32:efr32",
    ]
  }
}

chip_test_group("silabs_platform_tests") {
  tests = []

  if (sl_build_unit_tests) {
    tests += [
      "${chip_root}/examples/platform/silabs/tests:examples_tests",
      "${chip_root}/src/platform/silabs/wifi/icd/tests:wifi_icd_tests",
      ":platform_tests",
    ]
  }
}
